# cotizacion_QR_Streamlit

./: .gitignore  Readme.md  app.py  pyproject.toml
