[project]
name = "qr-streamlit"
version = "0.1.0"
description = "Aplicación Streamlit para cotización de seguros vehiculares con QR"
authors = [
    {name = "Ramas Seguros", email = "info@ramasseguros.com"}
]
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
